Creation of Cart View. Validations to Add Cart Creation of SQL StoredProcedure

--- a/quiz3/quiz3.csproj
+++ b/quiz3/quiz3.csproj
@@ -88,5 +88,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="SQL Server Scripts\GetProduct.sql" />
+    <Content Include="SQL Server Scripts\spLogin.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
